[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Box.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 100 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 100, 20 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 20, 100 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 100, 20 )

[node name="Box" type="Node2D"]
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]
playback_process_mode = 0
playback_speed = 2.0
playback/speed = 2.0

[node name="RedSide" type="Area2D" parent="."]
position = Vector2( -120, -120 )

[node name="RedCollider" type="CollisionShape2D" parent="RedSide"]
position = Vector2( -10, 120 )
shape = SubResource( 1 )

[node name="RedRect" type="ColorRect" parent="RedSide"]
margin_left = -30.0
margin_top = 20.0
margin_right = 10.0
margin_bottom = 220.0
color = Color( 0.705882, 0, 0, 1 )

[node name="GreenSide" type="Area2D" parent="."]
position = Vector2( -120, -120 )

[node name="GreenCollider" type="CollisionShape2D" parent="GreenSide"]
position = Vector2( 120, -10 )
rotation = -3.14159
shape = SubResource( 2 )

[node name="GreenRect" type="ColorRect" parent="GreenSide"]
margin_left = 20.0
margin_top = -30.0
margin_right = 220.0
margin_bottom = 10.0
rect_pivot_offset = Vector2( 120, 60 )
color = Color( 0, 0.705882, 0, 1 )

[node name="BlueSide" type="Area2D" parent="."]
position = Vector2( -120, -120 )

[node name="BlueCollider" type="CollisionShape2D" parent="BlueSide"]
position = Vector2( 250, 120 )
shape = SubResource( 3 )

[node name="BlueRect" type="ColorRect" parent="BlueSide"]
margin_left = 230.0
margin_top = 20.0
margin_right = 270.0
margin_bottom = 220.0
color = Color( 0, 0, 0.705882, 1 )

[node name="YellowSide" type="Area2D" parent="."]
position = Vector2( -120, -120 )

[node name="YellowCollider" type="CollisionShape2D" parent="YellowSide"]
position = Vector2( 120, 250 )
shape = SubResource( 4 )

[node name="YellowRect" type="ColorRect" parent="YellowSide"]
margin_left = 20.0
margin_top = 230.0
margin_right = 220.0
margin_bottom = 270.0
rect_pivot_offset = Vector2( 120, 60 )
color = Color( 1, 1, 0, 1 )
[connection signal="body_entered" from="RedSide" to="." method="_on_RedSide_body_entered"]
[connection signal="body_entered" from="GreenSide" to="." method="_on_GreenSide_body_entered"]
[connection signal="body_entered" from="BlueSide" to="." method="_on_BlueSide_body_entered"]
[connection signal="body_entered" from="YellowSide" to="." method="_on_YellowSide_body_entered"]
